syntax = "proto3";

package leaderboard;

option go_package = "github.com/williamfedele/leaderboard/protos";

service LeaderboardService {
    rpc AddScore (AddScoreRequest) returns (AddScoreResponse) {}
    rpc GetTopScores (GetTopScoresRequest) returns (GetTopScoresResponse) {}
}

message PlayerScore {
    string player_id = 1;
    int64 score = 2;
}

message AddScoreRequest {
    PlayerScore playerScore = 1;
}

message AddScoreResponse {
    bool success = 1;
}

message GetTopScoresRequest {
    int32 limit = 1;
}

message GetTopScoresResponse {
    repeated PlayerScore scores = 1;
}
